--- a/src/client/src/pages/Main.css
+++ b/src/client/src/pages/Main.css
@@ -25,7 +25,7 @@
 
 .main-container ul li footer {
   flex: 1;
-  background: #FFF;
+  background: #fff;
   border: 1px solid #eee;
   padding: 15px 20px;
   text-align: left;
@@ -56,7 +56,7 @@
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
   border: 0;
   border-radius: 4px;
-  background: #FFF;
+  background: #fff;
   cursor: pointer;
 }
 
@@ -73,7 +73,7 @@
 }
 
 .match-container {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -89,13 +89,13 @@
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  border: 5px solid #FFF;
+  border: 5px solid #fff;
   margin: 30px 0;
 }
 
 .match-container strong {
   font-size: 32px;
-  color: #FFF;
+  color: #fff;
 }
 
 .match-container p {
